@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2022 Axelor (<http://axelor.com>).
+ * Copyright (C) 2023 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or  modify
  * it under the terms of the GNU Affero General Public License, version 3,
@@ -20,12 +20,10 @@ package com.axelor.apps.supplychain.web;
 import com.axelor.apps.account.db.Invoice;
 import com.axelor.apps.account.db.repo.InvoiceRepository;
 import com.axelor.apps.base.db.Company;
-import com.axelor.apps.base.db.Currency;
 import com.axelor.apps.base.db.Partner;
-import com.axelor.apps.base.db.PriceList;
-import com.axelor.apps.base.db.Wizard;
 import com.axelor.apps.base.db.repo.BlockingRepository;
 import com.axelor.apps.base.service.BlockingService;
+import com.axelor.apps.message.exception.MessageExceptionMessage;
 import com.axelor.apps.purchase.db.PurchaseOrder;
 import com.axelor.apps.sale.db.SaleOrder;
 import com.axelor.apps.sale.db.SaleOrderLine;
@@ -34,11 +32,9 @@ import com.axelor.apps.sale.db.repo.SaleOrderRepository;
 import com.axelor.apps.stock.db.StockLocation;
 import com.axelor.apps.stock.db.StockMove;
 import com.axelor.apps.stock.db.repo.StockMoveRepository;
-import com.axelor.apps.stock.service.StockLocationService;
 import com.axelor.apps.supplychain.db.repo.PartnerSupplychainLinkTypeRepository;
-import com.axelor.apps.supplychain.exception.IExceptionMessage;
+import com.axelor.apps.supplychain.exception.SupplychainExceptionMessage;
 import com.axelor.apps.supplychain.service.PartnerSupplychainLinkService;
-import com.axelor.apps.supplychain.service.SaleOrderCreateServiceSupplychainImpl;
 import com.axelor.apps.supplychain.service.SaleOrderInvoiceService;
 import com.axelor.apps.supplychain.service.SaleOrderLineServiceSupplyChain;
 import com.axelor.apps.supplychain.service.SaleOrderPurchaseService;
@@ -51,16 +47,13 @@ import com.axelor.db.JPA;
 import com.axelor.db.mapper.Mapper;
 import com.axelor.exception.AxelorException;
 import com.axelor.exception.ResponseMessageType;
-import com.axelor.exception.db.repo.TraceBackRepository;
 import com.axelor.exception.service.TraceBackService;
 import com.axelor.i18n.I18n;
 import com.axelor.inject.Beans;
 import com.axelor.meta.schema.actions.ActionView;
-import com.axelor.meta.schema.actions.ActionView.ActionViewBuilder;
 import com.axelor.rpc.ActionRequest;
 import com.axelor.rpc.ActionResponse;
 import com.axelor.rpc.Context;
-import com.axelor.team.db.Team;
 import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.inject.Singleton;
@@ -79,6 +72,8 @@ import java.util.Optional;
 public class SaleOrderController {
 
   private final String SO_LINES_WIZARD_QTY_TO_INVOICE_FIELD = "qtyToInvoice";
+  private final String SO_LINES_WIZARD_PRICE_FIELD = "price";
+  private final String SO_LINES_WIZARD_QTY_FIELD = "qty";
 
   public void createStockMove(ActionRequest request, ActionResponse response) {
 
@@ -112,9 +107,7 @@ public class SaleOrderController {
                   traceback ->
                       response.setNotify(
                           String.format(
-                              I18n.get(
-                                  com.axelor.apps.message.exception.IExceptionMessage
-                                      .SEND_EMAIL_EXCEPTION),
+                              I18n.get(MessageExceptionMessage.SEND_EMAIL_EXCEPTION),
                               traceback.getMessage())));
         } else if (stockMoveList != null && stockMoveList.size() > 1) {
           response.setView(
@@ -140,12 +133,11 @@ public class SaleOrderController {
                   traceback ->
                       response.setNotify(
                           String.format(
-                              I18n.get(
-                                  com.axelor.apps.message.exception.IExceptionMessage
-                                      .SEND_EMAIL_EXCEPTION),
+                              I18n.get(MessageExceptionMessage.SEND_EMAIL_EXCEPTION),
                               traceback.getMessage())));
         } else {
-          response.setFlash(I18n.get(IExceptionMessage.SO_NO_DELIVERY_STOCK_MOVE_TO_GENERATE));
+          response.setFlash(
+              I18n.get(SupplychainExceptionMessage.SO_NO_DELIVERY_STOCK_MOVE_TO_GENERATE));
         }
       }
     } catch (Exception e) {
@@ -156,16 +148,14 @@ public class SaleOrderController {
   public void getStockLocation(ActionRequest request, ActionResponse response) {
 
     SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
-
-    if (saleOrder != null && saleOrder.getCompany() != null) {
-
+    try {
+      Company company = saleOrder.getCompany();
       StockLocation stockLocation =
-          Beans.get(StockLocationService.class)
-              .getPickupDefaultStockLocation(saleOrder.getCompany());
-
-      if (stockLocation != null) {
-        response.setValue("stockLocation", stockLocation);
-      }
+          Beans.get(SaleOrderSupplychainService.class)
+              .getStockLocation(saleOrder.getClientPartner(), company);
+      response.setValue("stockLocation", stockLocation);
+    } catch (Exception e) {
+      TraceBackService.trace(response, e);
     }
   }
 
@@ -179,7 +169,7 @@ public class SaleOrderController {
       if (saleOrder.getId() != null) {
 
         Partner supplierPartner = null;
-        List<Long> saleOrderLineIdSelected = new ArrayList<>();
+        List<Long> saleOrderLineIdSelected;
         Boolean isDirectOrderLocation = false;
         Boolean noProduct = true;
         Map<String, Object> values = getSelectedId(request, response, saleOrder);
@@ -202,10 +192,10 @@ public class SaleOrderController {
           }
 
           if (saleOrderLineIdSelected.isEmpty() || noProduct) {
-            response.setFlash(I18n.get(IExceptionMessage.SO_LINE_PURCHASE_AT_LEAST_ONE));
+            response.setFlash(I18n.get(SupplychainExceptionMessage.SO_LINE_PURCHASE_AT_LEAST_ONE));
           } else {
             response.setView(
-                ActionView.define("SaleOrder")
+                ActionView.define(I18n.get("SaleOrder"))
                     .model(SaleOrder.class.getName())
                     .add("form", "sale-order-generate-po-select-supplierpartner-form")
                     .param("popup", "true")
@@ -256,7 +246,7 @@ public class SaleOrderController {
       ActionRequest request, ActionResponse response, SaleOrder saleOrder) throws AxelorException {
     Partner supplierPartner = null;
     List<Long> saleOrderLineIdSelected = new ArrayList<>();
-    Map<String, Object> values = new HashMap<String, Object>();
+    Map<String, Object> values = new HashMap<>();
     Boolean isDirectOrderLocation = false;
     Boolean noProduct = true;
 
@@ -279,14 +269,15 @@ public class SaleOrderController {
       values.put("isDirectOrderLocation", isDirectOrderLocation);
 
       if (saleOrderLineIdSelected.isEmpty() || noProduct) {
-        throw new AxelorException(3, I18n.get(IExceptionMessage.SO_LINE_PURCHASE_AT_LEAST_ONE));
+        throw new AxelorException(
+            3, I18n.get(SupplychainExceptionMessage.SO_LINE_PURCHASE_AT_LEAST_ONE));
       }
     } else if (request.getContext().get("supplierPartnerSelect") != null) {
       supplierPartner =
           JPA.em()
               .find(
                   Partner.class,
-                  new Long(
+                  Long.valueOf(
                       (Integer)
                           ((Map) request.getContext().get("supplierPartnerSelect")).get("id")));
       values.put("supplierPartner", supplierPartner);
@@ -294,7 +285,7 @@ public class SaleOrderController {
           (String) request.getContext().get("saleOrderLineIdSelected");
 
       for (String saleOrderId : saleOrderLineIdSelectedStr.split(",")) {
-        saleOrderLineIdSelected.add(new Long(saleOrderId));
+        saleOrderLineIdSelected.add(Long.valueOf(saleOrderId));
       }
       values.put("saleOrderLineIdSelected", saleOrderLineIdSelected);
       values.put("isDirectOrderLocation", isDirectOrderLocation);
@@ -323,9 +314,9 @@ public class SaleOrderController {
 
       SaleOrderInvoiceService saleOrderInvoiceService = Beans.get(SaleOrderInvoiceService.class);
 
-      saleOrderInvoiceService.displayErrorMessageIfSaleOrderIsInvoiceable(
-          saleOrder, amountToInvoice, isPercent);
+      Map<Long, BigDecimal> qtyMap = new HashMap<>();
       Map<Long, BigDecimal> qtyToInvoiceMap = new HashMap<>();
+      Map<Long, BigDecimal> priceMap = new HashMap<>();
 
       List<Map<String, Object>> saleOrderLineListContext;
       saleOrderLineListContext =
@@ -337,9 +328,27 @@ public class SaleOrderController {
           if (qtyToInvoiceItem.compareTo(BigDecimal.ZERO) != 0) {
             Long soLineId = Long.valueOf((Integer) map.get("id"));
             qtyToInvoiceMap.put(soLineId, qtyToInvoiceItem);
+            BigDecimal priceItem = new BigDecimal(map.get(SO_LINES_WIZARD_PRICE_FIELD).toString());
+            priceMap.put(soLineId, priceItem);
+            BigDecimal qtyItem = new BigDecimal(map.get(SO_LINES_WIZARD_QTY_FIELD).toString());
+            qtyMap.put(soLineId, qtyItem);
           }
         }
       }
+
+      // Re-compute amount to invoice if invoicing partially
+      amountToInvoice =
+          saleOrderInvoiceService.computeAmountToInvoice(
+              amountToInvoice,
+              operationSelect,
+              saleOrder,
+              qtyToInvoiceMap,
+              priceMap,
+              qtyMap,
+              isPercent);
+
+      saleOrderInvoiceService.displayErrorMessageIfSaleOrderIsInvoiceable(
+          saleOrder, amountToInvoice, isPercent);
 
       // Information to send to the service to handle an invoicing on timetables
       List<Long> timetableIdList = new ArrayList<>();
@@ -387,228 +396,10 @@ public class SaleOrderController {
     }
   }
 
-  @SuppressWarnings({"rawtypes", "unchecked"})
-  public void mergeSaleOrder(ActionRequest request, ActionResponse response) {
-    List<SaleOrder> saleOrderList = new ArrayList<>();
-    List<Long> saleOrderIdList = new ArrayList<>();
-    boolean fromPopup = false;
-    String lineToMerge;
-    if (request.getContext().get("saleQuotationToMerge") != null) {
-      lineToMerge = "saleQuotationToMerge";
-    } else {
-      lineToMerge = "saleOrderToMerge";
-    }
-
-    if (request.getContext().get(lineToMerge) != null) {
-
-      if (request.getContext().get(lineToMerge) instanceof List) {
-        // No confirmation popup, sale orders are content in a parameter list
-        List<Map> saleOrderMap = (List<Map>) request.getContext().get(lineToMerge);
-        for (Map map : saleOrderMap) {
-          saleOrderIdList.add(new Long((Integer) map.get("id")));
-        }
-      } else {
-        // After confirmation popup, sale order's id are in a string separated by ","
-        String saleOrderIdListStr = (String) request.getContext().get(lineToMerge);
-        for (String saleOrderId : saleOrderIdListStr.split(",")) {
-          saleOrderIdList.add(new Long(saleOrderId));
-        }
-        fromPopup = true;
-      }
-    }
-    // Check if currency, clientPartner and company are the same for all selected
-    // sale orders
-    Currency commonCurrency = null;
-    Partner commonClientPartner = null;
-    Company commonCompany = null;
-    Partner commonContactPartner = null;
-    Team commonTeam = null;
-    // Useful to determine if a difference exists between teams of all sale orders
-    boolean existTeamDiff = false;
-    // Useful to determine if a difference exists between contact partners of all
-    // sale orders
-    boolean existContactPartnerDiff = false;
-    PriceList commonPriceList = null;
-    // Useful to determine if a difference exists between price lists of all sale
-    // orders
-    boolean existPriceListDiff = false;
-    StockLocation commonLocation = null;
-    // Useful to determine if a difference exists between stock locations of all
-    // sale orders
-    boolean existLocationDiff = false;
-
-    SaleOrder saleOrderTemp;
-    int count = 1;
-    for (Long saleOrderId : saleOrderIdList) {
-      saleOrderTemp = JPA.em().find(SaleOrder.class, saleOrderId);
-      saleOrderList.add(saleOrderTemp);
-      if (count == 1) {
-        commonCurrency = saleOrderTemp.getCurrency();
-        commonClientPartner = saleOrderTemp.getClientPartner();
-        commonCompany = saleOrderTemp.getCompany();
-        commonContactPartner = saleOrderTemp.getContactPartner();
-        commonTeam = saleOrderTemp.getTeam();
-        commonPriceList = saleOrderTemp.getPriceList();
-        commonLocation = saleOrderTemp.getStockLocation();
-      } else {
-        if (commonCurrency != null && !commonCurrency.equals(saleOrderTemp.getCurrency())) {
-          commonCurrency = null;
-        }
-        if (commonClientPartner != null
-            && !commonClientPartner.equals(saleOrderTemp.getClientPartner())) {
-          commonClientPartner = null;
-        }
-        if (commonCompany != null && !commonCompany.equals(saleOrderTemp.getCompany())) {
-          commonCompany = null;
-        }
-        if (commonContactPartner != null
-            && !commonContactPartner.equals(saleOrderTemp.getContactPartner())) {
-          commonContactPartner = null;
-          existContactPartnerDiff = true;
-        }
-        if (commonTeam != null && !commonTeam.equals(saleOrderTemp.getTeam())) {
-          commonTeam = null;
-          existTeamDiff = true;
-        }
-        if (commonPriceList != null && !commonPriceList.equals(saleOrderTemp.getPriceList())) {
-          commonPriceList = null;
-          existPriceListDiff = true;
-        }
-        if (commonLocation != null && !commonLocation.equals(saleOrderTemp.getStockLocation())) {
-          commonLocation = null;
-          existLocationDiff = true;
-        }
-      }
-      count++;
-    }
-
-    StringBuilder fieldErrors = new StringBuilder();
-    if (commonCurrency == null) {
-      fieldErrors.append(
-          I18n.get(
-              com.axelor.apps.sale.exception.IExceptionMessage.SALE_ORDER_MERGE_ERROR_CURRENCY));
-    }
-    if (commonClientPartner == null) {
-      if (fieldErrors.length() > 0) {
-        fieldErrors.append("<br/>");
-      }
-      fieldErrors.append(
-          I18n.get(
-              com.axelor.apps.sale.exception.IExceptionMessage
-                  .SALE_ORDER_MERGE_ERROR_CLIENT_PARTNER));
-    }
-    if (commonCompany == null) {
-      if (fieldErrors.length() > 0) {
-        fieldErrors.append("<br/>");
-      }
-      fieldErrors.append(
-          I18n.get(
-              com.axelor.apps.sale.exception.IExceptionMessage.SALE_ORDER_MERGE_ERROR_COMPANY));
-    }
-
-    if (fieldErrors.length() > 0) {
-      response.setFlash(fieldErrors.toString());
-      return;
-    }
-
-    // Check if priceList or contactPartner are content in parameters
-    if (request.getContext().get("priceList") != null) {
-      commonPriceList =
-          JPA.em()
-              .find(
-                  PriceList.class,
-                  new Long((Integer) ((Map) request.getContext().get("priceList")).get("id")));
-    }
-    if (request.getContext().get("contactPartner") != null) {
-      commonContactPartner =
-          JPA.em()
-              .find(
-                  Partner.class,
-                  new Long((Integer) ((Map) request.getContext().get("contactPartner")).get("id")));
-    }
-    if (request.getContext().get("team") != null) {
-      commonTeam =
-          JPA.em()
-              .find(
-                  Team.class,
-                  new Long((Integer) ((Map) request.getContext().get("team")).get("id")));
-    }
-    if (request.getContext().get("stockLocation") != null) {
-      commonLocation =
-          JPA.em()
-              .find(
-                  StockLocation.class,
-                  new Long((Integer) ((Map) request.getContext().get("stockLocation")).get("id")));
-    }
-
-    if (!fromPopup && (existContactPartnerDiff || existPriceListDiff || existTeamDiff)) {
-      // Need to display intermediate screen to select some values
-      ActionViewBuilder confirmView =
-          ActionView.define("Confirm merge sale order")
-              .model(Wizard.class.getName())
-              .add("form", "sale-order-merge-confirm-form")
-              .param("popup", "true")
-              .param("show-toolbar", "false")
-              .param("show-confirm", "false")
-              .param("popup-save", "false")
-              .param("forceEdit", "true");
-
-      if (existPriceListDiff) {
-        confirmView.context("contextPriceListToCheck", "true");
-      }
-      if (existContactPartnerDiff) {
-        confirmView.context("contextContactPartnerToCheck", "true");
-        confirmView.context("contextPartnerId", commonClientPartner.getId().toString());
-      }
-      if (existTeamDiff) {
-        confirmView.context("contextTeamToCheck", "true");
-      }
-      if (existLocationDiff) {
-        confirmView.context("contextLocationToCheck", "true");
-      }
-
-      confirmView.context(lineToMerge, Joiner.on(",").join(saleOrderIdList));
-
-      response.setView(confirmView.map());
-
-      return;
-    }
-
-    try {
-      SaleOrder saleOrder =
-          Beans.get(SaleOrderCreateServiceSupplychainImpl.class)
-              .mergeSaleOrders(
-                  saleOrderList,
-                  commonCurrency,
-                  commonClientPartner,
-                  commonCompany,
-                  commonLocation,
-                  commonContactPartner,
-                  commonPriceList,
-                  commonTeam);
-      if (saleOrder != null) {
-        // Open the generated sale order in a new tab
-        response.setView(
-            ActionView.define("Sale order")
-                .model(SaleOrder.class.getName())
-                .add("grid", "sale-order-grid")
-                .add("form", "sale-order-form")
-                .param("search-filters", "sale-order-filters")
-                .param("forceEdit", "true")
-                .context("_showRecord", String.valueOf(saleOrder.getId()))
-                .map());
-        response.setCanClose(true);
-      }
-    } catch (Exception e) {
-      response.setFlash(e.getLocalizedMessage());
-    }
-  }
-
   public void updateAmountToBeSpreadOverTheTimetable(
       ActionRequest request, ActionResponse response) {
     SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
-    Beans.get(SaleOrderServiceSupplychainImpl.class)
-        .updateAmountToBeSpreadOverTheTimetable(saleOrder);
+    Beans.get(SaleOrderSupplychainService.class).updateAmountToBeSpreadOverTheTimetable(saleOrder);
     response.setValue(
         "amountToBeSpreadOverTheTimetable", saleOrder.getAmountToBeSpreadOverTheTimetable());
   }
@@ -646,11 +437,11 @@ public class SaleOrderController {
     List<Integer> operationSelectValues =
         Beans.get(SaleOrderInvoiceService.class).getInvoicingWizardOperationDomain(saleOrder);
     response.setAttr(
-        "operationSelect",
+        "$operationSelect",
         "value",
         operationSelectValues.stream().min(Integer::compareTo).orElse(null));
 
-    response.setAttr("operationSelect", "selection-in", operationSelectValues);
+    response.setAttr("$operationSelect", "selection-in", operationSelectValues);
   }
 
   /**
@@ -712,7 +503,7 @@ public class SaleOrderController {
         saleOrderLineMap.put(SO_LINES_WIZARD_QTY_TO_INVOICE_FIELD, BigDecimal.ZERO);
         saleOrderLineList.add(saleOrderLineMap);
       }
-      response.setValue("amountToInvoice", BigDecimal.ZERO);
+      response.setValue("$amountToInvoice", BigDecimal.ZERO);
       response.setValue("saleOrderLineList", saleOrderLineList);
     } catch (Exception e) {
       TraceBackService.trace(response, e);
@@ -728,8 +519,21 @@ public class SaleOrderController {
         Integer deliveryState = saleOrderLine.getDeliveryState();
         if (!deliveryState.equals(SaleOrderLineRepository.DELIVERY_STATE_DELIVERED)
             && !deliveryState.equals(SaleOrderLineRepository.DELIVERY_STATE_PARTIALLY_DELIVERED)) {
-          saleOrderLine.setEstimatedDelivDate(saleOrder.getDeliveryDate());
+          saleOrderLine.setEstimatedShippingDate(saleOrder.getEstimatedShippingDate());
         }
+      }
+    }
+
+    response.setValue("saleOrderLineList", saleOrderLineList);
+  }
+
+  public void fillSaleOrderLinesDeliveryDate(ActionRequest request, ActionResponse response) {
+    SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
+
+    List<SaleOrderLine> saleOrderLineList = saleOrder.getSaleOrderLineList();
+    if (saleOrderLineList != null) {
+      for (SaleOrderLine saleOrderLine : saleOrderLineList) {
+        saleOrderLine.setEstimatedDeliveryDate(saleOrder.getEstimatedDeliveryDate());
       }
     }
 
@@ -751,7 +555,7 @@ public class SaleOrderController {
     if (stockMove != null) {
       response.setNotify(
           String.format(
-              I18n.get(IExceptionMessage.SALE_ORDER_STOCK_MOVE_CREATED),
+              I18n.get(SupplychainExceptionMessage.SALE_ORDER_STOCK_MOVE_CREATED),
               stockMove.getStockMoveSeq()));
     }
   }
@@ -834,7 +638,7 @@ public class SaleOrderController {
       saleOrder = Beans.get(SaleOrderRepository.class).find(saleOrder.getId());
       Beans.get(SaleOrderInvoiceService.class).displayErrorMessageBtnGenerateInvoice(saleOrder);
       response.setView(
-          ActionView.define("Invoicing")
+          ActionView.define(I18n.get("Invoicing"))
               .model(SaleOrder.class.getName())
               .add("form", "sale-order-invoicing-wizard-form")
               .param("popup", "reload")
@@ -846,34 +650,6 @@ public class SaleOrderController {
               .map());
     } catch (Exception e) {
       TraceBackService.trace(response, e);
-    }
-  }
-
-  /**
-   * Called from sale order form view when confirming sale order and analytic distribution is
-   * required from company's sale config.
-   *
-   * @param request
-   * @param response
-   */
-  public void checkSaleOrderAnalyticDistributionTemplate(
-      ActionRequest request, ActionResponse response) {
-    try {
-      SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
-      List<String> productList = new ArrayList<String>();
-      for (SaleOrderLine saleOrderLine : saleOrder.getSaleOrderLineList()) {
-        if (saleOrderLine.getAnalyticDistributionTemplate() == null) {
-          productList.add(saleOrderLine.getProductName());
-        }
-      }
-      if (!productList.isEmpty()) {
-        throw new AxelorException(
-            TraceBackRepository.CATEGORY_MISSING_FIELD,
-            I18n.get(IExceptionMessage.SALE_ORDER_ANALYTIC_DISTRIBUTION_ERROR),
-            productList);
-      }
-    } catch (AxelorException e) {
-      TraceBackService.trace(response, e, ResponseMessageType.ERROR);
     }
   }
 
@@ -993,9 +769,10 @@ public class SaleOrderController {
     try {
       SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
       saleOrder = Beans.get(SaleOrderRepository.class).find(saleOrder.getId());
+      SaleOrderLineServiceSupplyChain saleOrderLineServiceSupplyChain =
+          Beans.get(SaleOrderLineServiceSupplyChain.class);
       for (SaleOrderLine saleOrderLine : saleOrder.getSaleOrderLineList()) {
-        Beans.get(SaleOrderLineServiceSupplyChain.class)
-            .updateStockMoveReservationDateTime(saleOrderLine);
+        saleOrderLineServiceSupplyChain.updateStockMoveReservationDateTime(saleOrderLine);
       }
     } catch (Exception e) {
       TraceBackService.trace(response, e);
@@ -1009,6 +786,19 @@ public class SaleOrderController {
       Beans.get(SaleOrderSupplychainService.class)
           .setDefaultInvoicedAndDeliveredPartnersAndAddresses(saleOrder);
       response.setValues(saleOrder);
+    } catch (Exception e) {
+      TraceBackService.trace(response, e);
+    }
+  }
+
+  public void getToStockLocation(ActionRequest request, ActionResponse response) {
+    SaleOrder saleOrder = request.getContext().asType(SaleOrder.class);
+    try {
+      Company company = saleOrder.getCompany();
+      StockLocation toStockLocation =
+          Beans.get(SaleOrderSupplychainService.class)
+              .getToStockLocation(saleOrder.getClientPartner(), company);
+      response.setValue("toStockLocation", toStockLocation);
     } catch (Exception e) {
       TraceBackService.trace(response, e);
     }
